# barebones

./: Cargo.toml  Changelog.md  Makefile  README.md  Readme.md  build.zig  env.sh  kikuyu-kernel.json  linker.ld  qemu-wrapper.sh  shell.nix
.cargo/: config.toml
rust/: README.md
rust/kikuyu/: CHANGELOG.md  README.md  linker.ld
rust/kikuyu/.cargo/: config.toml
rust/kikuyu/src/: main.rs  vga.rs
src/: boot.s  kernel.zig  linker.ld  main.rs  multiboot.rs  serial.rs  terminal.zig  vga.rs  vga.zig  vga_text_mode.zig
src/drivers/: mod.rs  serial.rs  uart.rs  vga.rs
src/memory/: bump_allocator.rs  idt.rs  mod.rs  multiboot.rs
zig_port/src/: vga.zig
zig_try/: README.md  build.zig
zig_try/src/: boot.s
