[package]
name = "kikuyu"
version = "0.1.0"
edition = "2021"

[profile.release]
# Note from https://os.phil-opp.com/testing/
# Note: There is currently a bug in cargo that leads to "duplicate lang item"
#       errors on cargo test in some cases. It occurs when you have set
#       panic = "abort" for a profile in your Cargo.toml. Try removing it,
#       then cargo test should work. See the cargo issue for more information
#       on this.
#panic = "abort" # disable stack unwinding on panic

[profile.dev]
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
